[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/sprites/battle/SOUL_B_R.png" type="Texture" id=1]
[ext_resource path="res://src/sprites/battle/SOUL_GR_R.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/battle/player/BT_SOUL_R.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=1]
resource_name = "Hit"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Soul" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Graze" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PoolVector2Array( 0, 8, 8, 0, 8, -5, 5, -8, 0, -3, -5, -8, -8, -5, -8, 0 )

[node name="Grazebox" type="Area2D" parent="."]
collision_mask = 0

[node name="Polygon" type="CollisionPolygon2D" parent="Grazebox"]
polygon = PoolVector2Array( -23, 5, -23, -16, -16, -23, 16, -23, 23, -16, 23, 5, 5, 23, -5, 23 )

[node name="Anime" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 1 )

[node name="InvicibleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Grazebox" to="." method="_on_Grazebox_area_entered"]
[connection signal="area_exited" from="Grazebox" to="." method="_on_Grazebox_area_exited"]
[connection signal="timeout" from="InvicibleTimer" to="." method="_on_InvicibleTimer_timeout"]
